adding inputs/time/outputs to the html page

--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <script src="./bootstrap.js"></script>
+    <h2>Inputs</h2>
+    <div id="inputs" style="white-space: pre ; display: block; unicode-bidi: embed; font-family: monospace, monospace;"></div>
+    <h2>Time</h2>
+    <div id="time" style="white-space: pre ; display: block; unicode-bidi: embed; font-family: monospace, monospace;"></div>
+    <h2>Output</h2>
     <div id="output" style="white-space: pre ; display: block; unicode-bidi: embed; font-family: monospace, monospace;"></div>
   </body>
 </html>
